--- a/updates.qmd
+++ b/updates.qmd
@@ -5,7 +5,7 @@ listing:
   fields: [date, title, categories]
   contents: updates
   sort: "date desc"
-  type: table
+  type: default
   categories: true
   sort-ui: false
   filter-ui: false
